--- a/source/index.html
+++ b/source/index.html
@@ -60,12 +60,12 @@
             <li class="categories__item categories__item--slim">
               <h3 class="categories__title">Похудение</h3>
               <p class="categories__description">Ваш кот весит больше собаки и почти утратил способность лазить по деревьям? Пора на диету! Cat Energy Slim поможет вашему питомцу сбросить лишний вес.</p>
-              <a class="categories__link" href="#"> Каталог slim </a>
+              <a class="categories__link" href="catalog.html/slim"> Каталог slim </a>
             </li>
             <li class="categories__item categories__item--pro">
               <h3 class="categories__title">Набор массы</h3>
               <p class="categories__description">Заработать авторитет среди дворовых котов и даже собак? Серия Cat Energy Pro поможет вашему коту нарастить необходимые мышцы!</p>
-              <a class="categories__link" href="#"> Каталог pro </a>
+              <a class="categories__link" href="catalog.html/pro"> Каталог pro </a>
             </li>
           </ul>
         </div>
@@ -113,7 +113,15 @@
             <source type="image/webp" srcset="img/before-mobile@1x.webp 1x, img/before-mobile@2x.webp 2x">
             <source media="(min-width:1300px)" srcset="img/before-desktop@1x.png 1x, img/before-desktop@2x.png 2x">
             <source media="(min-width:768px)" srcset="img/before-tablet@1x.png 1x, img/before-tablet@2x.png 2x">
-            <img class="example__image" src="img/before-mobile@1x.png" srcset="img/before-mobile@2x.png 2x" width="320" height="232" alt="Пример Питания">
+            <img class="example__image example__image--before" src="img/before-mobile@1x.png" srcset="img/before-mobile@2x.png 2x" width="320" height="237" alt="Пример Питания">
+          </picture>
+          <picture>
+            <source type="image/webp" media="(min-width: 1300px)" srcset="img/after-desktop@1x.webp 1x, img/after-desktop@2x.webp 2x">
+            <source type="image/webp" media="(min-width: 768px)" srcset="img/after-tablet@1x.webp 1x, img/after-tablet@2x.webp 2x">
+            <source type="image/webp" srcset="img/after-mobile@1x.webp 1x, img/after-mobile@2x.webp 2x">
+            <source media="(min-width:1300px)" srcset="img/after-desktop@1x.png 1x, img/after-desktop@2x.png 2x">
+            <source media="(min-width:768px)" srcset="img/after-tablet@1x.png 1x, img/after-tablet@2x.png 2x">
+            <img class="example__image example__image--after" src="img/after-mobile@1x.png" srcset="img/after-mobile@2x.png 2x" width="320" height="237" alt="Пример Питания">
           </picture>
           <div class="example__choice">
             <button class="example__choice-button example__choice-button--before">Было</button>
